--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,6 @@ bower_components
 build/Release
 
 # Dependency directories
-package-lock.json
 node_modules/
 jspm_packages/
 
@@ -113,3 +112,6 @@ test_cert.txt
 
 # bulk testing
 test/test.bulk.spec.js
+
+# Dependency directories
+package-lock.json
